Bug fixed in play button z-index property

--- a/plugins/es.upv.paella.playPauseButtonPlugin/playbutton.less
+++ b/plugins/es.upv.paella.playPauseButtonPlugin/playbutton.less
@@ -13,7 +13,7 @@
 	left: 0;
 	bottom: 51px;
 	right: 0;
-	z-index: 500;
+	z-index: 1;
 	width: 100%;
 	height: 100%;
 }
